gcc/testsuite/g++.dg/parse/dtor10.C
// PR c++/27508
// { dg-do compile }

namespace N
{
    struct A { ~A(); };
}

N::~A () {}  // { dg-error "not a class-name" }
